Fixed info, added day to profile shifts and improved design of profile header

--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -260,6 +260,17 @@
   .dashboard .table .long {
     width: 28%; }
 
+.dashboard__header {
+  background-color: #32394d;
+  padding: 60px 0; }
+  .dashboard__header .title {
+    color: white;
+    font-size: 48px;
+    line-height: 50px; }
+  .dashboard__header .subtitle {
+    color: #ffffff;
+    margin-top: 10px; }
+
 .dashboard__block, .dashboard__block--half {
   margin-top: 40px;
   background-color: white;
@@ -267,12 +278,13 @@
   -moz-box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
-  padding: 30px 50px;
+  padding: 40px 50px;
   min-height: 500px;
   font-size: 24px;
   position: relative; }
   .dashboard__block-title {
-    font-weight: bold; }
+    font-weight: bold;
+    font-size: 32px; }
     .dashboard__block-title-container {
       display: flex;
       align-items: center; }
@@ -285,13 +297,13 @@
 .dashboard__table-heading {
   background-color: #ad408e;
   margin-top: 30px;
-  padding: 15px 30px;
+  padding: 20px 30px;
   font-weight: 600; }
 
 .dashboard__table-row {
   background-color: #ec70c9;
   margin-top: 5px;
-  padding: 7px 30px; }
+  padding: 12px 30px; }
   .dashboard__table-row.unpublished {
     background-color: #c24242; }
 
@@ -323,11 +335,6 @@
 .dashboard .fas {
   margin-right: 10px; }
 
-.dashboard .subtitle {
-  color: #a3a3a3;
-  margin-top: 5px;
-  margin-bottom: 10px; }
-
 @media only screen and (max-width: 1200px) {
   .dashboard .table {
     min-width: 0;
@@ -345,6 +352,10 @@
     .dashboard .table .short,
     .dashboard .table .long {
       width: auto; }
+      .dashboard .table .short .block,
+      .dashboard .table .long .block {
+        text-align: center;
+        display: block; }
     .dashboard .table.dashboard__table-heading {
       display: none; }
   .dashboard__block, .dashboard__block--half {
@@ -859,7 +870,10 @@ a {
   margin: 0 auto;
   color: white;
   transition: 0.2s color ease-in-out;
-  display: flex; }
+  display: flex;
+  flex-direction: column; }
+  .shift__wrapper .flex {
+    display: flex; }
   .shift__wrapper.hide {
     display: none; }
   .shift__wrapper.edit .shift__time {
