--- a/frontend/src/scss/dashboard.scss
+++ b/frontend/src/scss/dashboard.scss
@@ -21,6 +21,19 @@
       width: 28%;
     }
   }
+  &__header {
+    background-color: #32394d;
+    padding: 60px 0;
+    .title {
+      color: white;
+      font-size: 48px;
+      line-height: 50px;
+    }
+    .subtitle {
+      color: #ffffff;
+      margin-top: 10px;
+    }
+  }
   &__block {
     margin-top: 40px;
     background-color: rgb(255, 255, 255);
@@ -28,12 +41,13 @@
     -moz-box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
-    padding: 30px 50px;
+    padding: 40px 50px;
     min-height: 500px;
     font-size: 24px;
     position: relative;
     &-title {
       font-weight: bold;
+      font-size: 32px;
       &-container {
         display: flex;
         align-items: center;
@@ -52,13 +66,13 @@
     &-heading {
       background-color: #ad408e;
       margin-top: 30px;
-      padding: 15px 30px;
+      padding: 20px 30px;
       font-weight: 600;
     }
     &-row {
       background-color: $pink;
       margin-top: 5px;
-      padding: 7px 30px;
+      padding: 12px 30px;
       &.unpublished {
         background-color: rgb(194, 66, 66);
       }
@@ -101,11 +115,6 @@
   .fas {
     margin-right: 10px;
   }
-  .subtitle {
-    color: #a3a3a3;
-    margin-top: 5px;
-    margin-bottom: 10px;
-  }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -129,6 +138,10 @@
       .short,
       .long {
         width: auto;
+        .block {
+          text-align: center;
+          display: block;
+        }
       }
       &.dashboard__table-heading {
         display: none;
